[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Menus/Multiplayer/Lobby.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/DefaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Textures/Background/Context ForestB2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/Background/Context ForestBush1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Background/Context ForestBush2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/Background/Context ForestFR4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/Background/Context ForestB1.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Effects/FireFlies/FireflySpawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://Theme.tres" type="Theme" id=9]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/Overlock/Overlock-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 10 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="RetrieveLobby" type="HTTPRequest" parent="."]

[node name="EnterWorld" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.756863, 0.658824, 0.392157, 1 )

[node name="ContextForestB2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = -266.0
margin_right = 12610.0
margin_bottom = 4614.0
rect_rotation = 5.21235
rect_scale = Vector2( 0.2, 0.3 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.509804 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.756863, 0.658824, 0.392157, 1 )

[node name="ContextForestB1" type="Sprite" parent="."]
position = Vector2( 985, 535 )
scale = Vector2( 0.34727, 0.350161 )
texture = ExtResource( 7 )
flip_h = true

[node name="ColorRect3" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.756863, 0.658824, 0.392157, 1 )

[node name="ContextForestFr4" type="Sprite" parent="."]
position = Vector2( 755, 419 )
scale = Vector2( 0.399087, 0.377953 )
texture = ExtResource( 6 )
flip_h = true

[node name="ColorRect4" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.27451 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.756863, 0.658824, 0.392157, 1 )

[node name="ContextForestBush2" type="Sprite" parent="."]
position = Vector2( 891, 766 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="ContextForestBush1" type="Sprite" parent="."]
position = Vector2( 1005, 824 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="FireflySpawner" parent="." instance=ExtResource( 8 )]
position = Vector2( 968, 574 )
scale = Vector2( 107.683, 63.036 )

[node name="CenterContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 790.0
margin_right = 1130.0
margin_bottom = 1080.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 340.0
margin_bottom = 333.0
theme = ExtResource( 9 )
text = "Lobby: Epic super cool lobby"
align = 1

[node name="Control3" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 337.0
margin_right = 340.0
margin_bottom = 340.0
rect_min_size = Vector2( 0, 3 )

[node name="LobbyList" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 340.0
margin_bottom = 644.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 3
theme = ExtResource( 9 )
custom_fonts/normal_font = ExtResource( 2 )

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 648.0
margin_right = 340.0
margin_bottom = 678.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 682.0
margin_right = 340.0
margin_bottom = 729.0

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 62.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 273.0
margin_bottom = 47.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 277.0
margin_right = 340.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 733.0
margin_right = 340.0
margin_bottom = 738.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 742.0
margin_right = 340.0
margin_bottom = 784.0

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 90.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 94.0
margin_right = 245.0
margin_bottom = 42.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 249.0
margin_right = 340.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[connection signal="request_completed" from="RetrieveLobby" to="." method="_on_RetrieveLobby_request_completed"]
[connection signal="request_completed" from="EnterWorld" to="." method="_on_EnterWorld_request_completed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/Back" to="." method="_on_Back_pressed"]
